--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "php": ">=8.1",
         "symfony/framework-bundle": "^6.0|^7.0",
         "symfony/security-bundle": "^6.0|^7.0",
-        "doctrine/orm": "^2.10",
+        "doctrine/orm": "^2.10 || ^3.0",
         "doctrine/doctrine-bundle": "^2.5"
     },
     "require-dev": {
