fix: correct service resource paths in services.yaml for Symfony compatibility with cache:clear and auto-discovery

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -5,12 +5,12 @@ services:
     public: false
 
   Jonston\SymfonyPermission\Repository\:
-    resource: '../Repository/*'
+    resource: '../../Repository/*'
     tags: ['doctrine.repository_service']
 
   Jonston\SymfonyPermission\Service\:
-    resource: '../Service/*'
-    exclude: '../Service/*Interface.php'
+    resource: '../../Service/*'
+    exclude: '../../Service/*Interface.php'
 
   # Explicit service definitions
   Jonston\SymfonyPermission\Service\PermissionServiceInterface:
