--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "^8.1",
         "symfony/framework-bundle": "^6.0|^7.0",
         "doctrine/orm": "^2.10|^3.0",
-        "doctrine/doctrine-bundle": "^2.5"
+        "doctrine/doctrine-bundle": "^2.5",
+        "symfony/validator": "^7.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0|^11.0",
